--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,5 +1,9 @@
-app:
-    resource: "@AppBundle/Controller/"
-    type:     annotation
+blog_blog:
+    resource: "@BlogBlogBundle/Resources/config/routing.yml"
+    prefix:   /
+
+#app:
+    #resource: "@AppBundle/Controller/"
+    #type:     annotation
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
