add form message - Step 2 Final + create post - step 3

--- a/src/Blog/BlogBundle/Resources/config/routing.yml
+++ b/src/Blog/BlogBundle/Resources/config/routing.yml
@@ -8,3 +8,9 @@ BlogBlogBundle_contact:
     defaults: { _controller: BlogBlogBundle:Page:contact }
     requirements:
       methods:  GET
+BlogBlogBundle_blog_show:
+    path:  /{id}
+    defaults: { _controller: BlogBlogBundle:Blog:show }
+    requirements:
+        methods:  GET
+        id: \d+
