Step 1 + Step 2 - all work!

--- a/src/Blog/BlogBundle/Resources/config/routing.yml
+++ b/src/Blog/BlogBundle/Resources/config/routing.yml
@@ -14,3 +14,8 @@ BlogBlogBundle_blog_show:
     requirements:
         methods:  GET
         id: \d+
+BlogBlogBundle_about:
+    path:  /about
+    defaults: { _controller: BlogBlogBundle:Page:about }
+    requirements:
+        methods:  GET
